...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/attraction_name_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:maxWidth="250dp"
                    android:padding="5dp"
...
                    android:selectAllOnFocus="true"
                    android:textColorHighlight="#AAAAAAAA"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/attraction_search_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="24dp"
                    android:background="#EEEEEE"
                    android:layout_weight="1"
                    android:layout_gravity="top"
...
                    android:text="Cost:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <EditText
                    android:id="@+id/attraction_cost_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="24dp"
                    android:padding="5dp"
                    android:background="#EEEEEE"
                    android:textSize="20dp"
...
                    android:text="Start Date:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <Button
                    android:id="@+id/attraction_start_date_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="#EEEEEE"
                    android:textSize="20dp"
                    android:hint="Pick Date" />
...
                    android:text="Start Time:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <Button
                    android:id="@+id/attraction_start_time_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="#EEEEEE"
                    android:textSize="20dp"
                    android:hint="Pick Time"/>
...
                    android:text="End Date:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <Button
                    android:id="@+id/attraction_end_date_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="#EEEEEE"
                    android:textSize="20dp"
                    android:hint="Pick Date" />
...
                    android:text="End Time:"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:layout_marginStart="24dp" />

                <Button
                    android:id="@+id/attraction_end_time_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:background="#EEEEEE"
                    android:textSize="20dp"
                    android:hint="Pick Time"
...
                    android:text="Description"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    app:backgroundTint="@color/colorSecondaryLight" />

                <EditText
                    android:id="@+id/attraction_description_et"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
...
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <Button
                    android:id="@+id/attraction_add_ticket_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1.0"
                    android:text="View/Add A Ticket"
                    android:gravity="center|center_horizontal"
                    android:textAllCaps="false"
...
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/attraction_update_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/btn_shape_selector_white"
...
